--- a/CarWorkshop.MVC/Views/Shared/_Layout.cshtml
+++ b/CarWorkshop.MVC/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    var action = ViewContext.RouteData.Values["Action"]!.ToString();
-    var controller = ViewContext.RouteData.Values["Controller"]!.ToString();
+    var action = ViewContext.RouteData.Values["Action"]?.ToString();
+    var controller = ViewContext.RouteData.Values["Controller"]?.ToString();
 }
 <!DOCTYPE html>
 <html lang="en">
@@ -37,6 +37,7 @@
                         </li>
 
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
