--- a/CarWorkshop.MVC/Views/CarWorkshop/Details.cshtml
+++ b/CarWorkshop.MVC/Views/CarWorkshop/Details.cshtml
@@ -55,3 +55,11 @@
     }
     <a asp-action="Index">Back to List</a>
 </div>
+
+<h3>Services:</h3>
+<div id="services" class="row" data-encoded-name="@Model.EncodedName"></div>
+
+
+@section Scripts {
+    <script src="~/js/CarWorkshop/Details.js"></script>
+}
